# rebind

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  Module.cc  Python.cc  README.md  Source.cc  Test.cc  cpy.py  mkdocs.yml  ninja.ansi  setup.py  test.py
cmake/: Python.cmake  Rust.cmake
cpy/: __init__.py  build.py  cli.py  common.py  console.py  junit.py  native.py  render.py  teamcity.py  template.py  types.py  xml.py
docs/: C++.md  Convert.md  Notes.md  Python.md  Types.md  extra.css  todo.md  traits.md
example/: CMakeLists.txt  Example.cc  main.cc
example/python/: __init__.py  submodule.py
include/ara/: API.h  Call.h  Common.h  Core.h  Error.h  Frame.h  Impl.h  Index.h  Parts.h  Raw.h  Ref.h  Scope.h  Signature.h  Structs.h  Target.h  Type.h
include/ara-cpp/: Adapter.h  Array.h  Arrays.h  Container.h  Core.h  Frame.h  Functor.h  Schema.h  Standard.h  Traits.h  Tuple.h  Value.h
include/ara-py/: Buffer.h  Builtins.h  Call.h  Dump.h  Index.h  Load.h  Meta.h  Method.h  Methods.h  Module.h  Raw.h  Variable.h  Wrap.h
include/ara-python/: Cast.cc  Common.h  Definitions.cc  Function.h  Module.cc  Object.h  Python.cc  Raw.h
include/ara-rust/: Module.h
include/cpy/: Adapter.h  Approx.h  BasicTypes.h  Common.h  Context.h  Conversions.h  CxxPython.h  Document.h  Error.h  Function.h  Function.h.orig  FunctionAdapter.h  Glue.h  Macros.h  Object.h  Optional.h  PythonAPI.h  PythonBindings.h  PythonCast.h  Signature.h  Standard.h  StandardTypes.h  Storage.h  Suite.h  Test.h  Type.h  Types.h  Value.h  Variable.h
include/cpy-python/: API.h  CAPI.h  Cast.h  Object.h
include/cpytest/: Binding.h  Context.h  Glue.h  Macros.h  Stream.h  Suite.h  Test.h
include/lilwil/: Approx.h  Config.h  Context.h  Glue.h  Macros.h  Object.h  Suite.h  Test.h  Value.h
include/old/: Convert.h  Implicit.h  Scope.h  Storage.h  Variable.h
include/rebind/: API.h  Adapter.h  Arrays.h  BaseVariable.h  BasicTypes.h  Binary.h  Call.h  Common.h  Conversions.h  Convert.h  Default.h  Document.h  Erased.h  Error.h  Frame.h  Function.h  Impl.h  Implicit.h  Index.h  Parts.h  Pointer.h  Raw.h  Ref.h  Schema.h  Scope.h  Signature.h  Storage.h  Table.h  Type.h  Value.h  Variable.h
include/rebind-cpp/: Arrays.h  Core.h  Schema.h  Value.h
include/rebind-python/: API.h  CAPI.h  Cast.cc  Cast.h  Common.h  Definitions.cc  Function.cc  Function.h  Globals.cc  Index.cc  Methods.h  Module.cc  Object.h  Python.cc  Raw.h  Var.cc  Variable.h  Wrap.h  inspire-job.yaml
include/rebind-rust/: Module.h
include/rebind/types/: Arrays.h  Core.h  Standard.h
include/sfb/: API.h  Call.h  Common.h  Core.h  Error.h  Impl.h  Index.h  Parts.h  Raw.h  Ref.h  Signature.h  Structs.h  Target.h  Type.h
include/sfb-cpp/: Adapter.h  Array.h  Frame.h  Functor.h  Schema.h  Standard.h  Traits.h  Tuple.h  Value.h
include/sfb-rust/: Module.h
lilwil/: cli.py  common.py  console.py
lilwil-repo/: CMakeLists.txt  README.md
lilwil-repo/include/lilwil/: Binding.h  Glue.h  Stream.h  Suite.h  Value.h
lilwil-repo/lilwil/: cli.py
lilwil-repo/source/lilwil/: Module.cc  Source.cc
lilwil-repo/xml/: test_xml.py
old/: Convert.h  Implicit.h  Storage.h
old/ara-python/: Cast.h  Function.h  Globals.cc  Module.cc  Python.cc
package/: __init__.py  submodule.py
python/: setup.py
python/ara/: __init__.py  common.py  render.py
python/rebind/: __init__.py  common.py  render.py
rebind/: common.py  render.py
rust/: Cargo.toml  build.rs
rust/src/: capi.rs  function.rs  lib.rs  main.rs  table.rs  variable.rs
rust/src/submod/: mod.rs
rust/tests/: test.rs
source/: Any.cc  Cast.cc  Erased.cc  Function.cc  Globals.cc  Module.cc  Python.cc  Rust.cc  Schema.cc  Source.cc  Test.cc  Value.cc  Var.cc
source/cpy/: Globals.cc  Module.cc  Python.cc  Value.cc
source/cpytest/: Module.cc  Python.cc  Runner.cc  Source.cc
source/lilwil/: Python.cc  Runner.cc  Source.cc
source/python/: Call.cc  Load.cc  Module.cc  Source.cc
